fix: input, textarea respect width of form element on smaller viewsizes.

--- a/styles/main.css
+++ b/styles/main.css
@@ -49,6 +49,7 @@ p {
 input,
 textarea {
   font-size: 2rem;
+  width: 100%;
 }
 
 html,
